<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/search_fragment">

    <fragment
        android:id="@+id/search_fragment"
        android:name="dam_a51696.recipebuddy.presentation.ui.search.SearchFragment"
        android:label="@string/search_title"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_search_fragment_to_detail_fragment"
            app:destination="@id/detail_fragment" />
    </fragment>

    <fragment
        android:id="@+id/favorites_fragment"
        android:name="dam_a51696.recipebuddy.presentation.ui.favorites.FavoritesFragment"
        android:label="@string/favorites_title"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_favorites_fragment_to_detail_fragment"
            app:destination="@id/detail_fragment" />
    </fragment>

    <fragment
        android:id="@+id/detail_fragment"
        android:name="dam_a51696.recipebuddy.presentation.ui.detail.DetailFragment"
        android:label="@string/detail_title"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="meal_id"
            app:argType="string" />
    </fragment>

</navigation>
